13.09.2025 fixes home sections and scrollbar

--- a/frontend/src/components/public/pages/home/Home.module.scss
+++ b/frontend/src/components/public/pages/home/Home.module.scss
@@ -4,4 +4,5 @@
   min-height: 100vh;
   overflow-x: hidden;
   background-color: vars.$bg-level-2;
+  scrollbar-width: none;
 }
